# routes/overview.js
@@ -10,15 +10,6 @@ router.get('/sleutelcompetenties', async (req, res, next) => {
     }
 });
 
-router.get('/studiedomeinen', async (req, res, next) => {
-    try {
-        const body = await req.app.settings.ourSettings.queryService.queryByName('overview-top-down', {collection: "http://ilearn.ilabt.imec.be/vocab/elem/studiedomeinen"});
-        res.send(body);
-    } catch(e) {
-        next(e);
-    }
-});
-
 router.get('/leergebieden', async (req, res, next) => {
     try {
         const body = await req.app.settings.ourSettings.queryService.queryByName('overview-top-down', {collection: "http://ilearn.ilabt.imec.be/vocab/elem/leergebieden"});
